--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -3,3 +3,12 @@
 <meta name="author" content="Pierre POMES">
 
 <meta name="robots" content="index, follow">
+
+<!-- Google tag (gtag.js) - GA4 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', '{{ site.google_analytics }}');
+</script>
